--- a/Down_midias/package.json
+++ b/Down_midias/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
+    "type": "module",
+    "name": "script",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "ytdl-core": "^4.11.2"
+    "ytdl-core": "^4.11.2",
+    "author": "ÇHAMP$",
+    "license": "ISC"
   }
 }
