--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,2 @@
 [.ShellClassInfo]
-IconResource=C:\Users\fabio\OneDrive\Documentos\Icones\rockstar.ico,0
+IconResource=C:\Users\fabio\OneDrive\Documentos\Icones\projects.ico,0
